login alignment corrected

--- a/css/index.css
+++ b/css/index.css
@@ -5,8 +5,10 @@
     box-sizing: border-box;
 }
 
-.errorMessage{color: red;
-font-size: 12px;
+.errorMessage{
+    color: red;
+    font-size: 12px;
+    margin-top: 5px;
 }
 
 .eye-icon {
@@ -143,6 +145,9 @@ font-size: 12px;
         padding-top: 10px;
         color: white;
     }
+    #passwordError,#confirmPasswordError{
+        margin-top: -20px;
+    }
 }
 
 /* Desktop Styles */
@@ -176,7 +181,7 @@ font-size: 12px;
         width: 150px;
         height: 50px;
         margin-top: 60px;
-        margin-left: 650px;
+        margin-left: 670px;
         
     }
     
@@ -194,8 +199,7 @@ font-size: 12px;
     }
     
     h2 {
-        padding-bottom: 2px;
-        padding-top: 1px;
+        padding-top: 20px;
         color: white;
     }
     
@@ -254,5 +258,9 @@ font-size: 12px;
         color: white;
         font-size: small;
 
+    }
+
+    #passwordError,#confirmPasswordError{
+        margin-top: -20px;
     }
 }
